--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "eslint-plugin-import": "^2.14.0",
     "mocha": "^5.2.0",
     "npm-watch": "^0.4.0",
-    "nyc": "^13.1.0"
+    "nyc": "^13.1.0",
+    "coveralls": "^3.0.2"
   },
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
