--- a/package.json
+++ b/package.json
@@ -41,7 +41,11 @@
     "chai": "^4.2.0",
     "chai-http": "^4.2.0",
     "coveralls": "^3.0.2",
-    "express": "^4.16.4"
+    "dotenv": "^6.1.0",
+    "express": "^4.16.4",
+    "pg": "^7.6.1",
+    "pool": "^0.4.1",
+    "should": "^13.2.3"
   },
   "engines": {
     "node": "10.x"
