--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: node_js
 node_js:
-  - "node"
+  - "stable"
 after_success:
-  - npm run nyc
+  - npm run coveralls
 notifications:
   - email: none 
