--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build": "npm run build-server",
     "start": "NODE_ENV=DEV nodemon build/routes/index.js ",
     "nyc": "nyc npm test",
+    "start_prod": "NODE_ENV=production node build/routes/index.js",
     "coveralls": "nyc report --reporter=text-lcov | coveralls"
   },
   "author": "Clovis",
@@ -45,7 +46,8 @@
     "jsonwebtoken": "^8.4.0",
     "pg": "^7.6.1",
     "pool": "^0.4.1",
-    "should": "^13.2.3"
+    "should": "^13.2.3",
+    "url": "^0.11.0"
   },
   "engines": {
     "node": "10.x"
